--- a/src/main/resources/static/css/admin/adminMain.css
+++ b/src/main/resources/static/css/admin/adminMain.css
@@ -13,6 +13,7 @@
   background-color: #EFEFEF;
   font-family: 'Pretendard-Regular';
   box-sizing: border-box;
+  /* border: 1px solid black; */
 }
 
 html, body {
