--- a/src/main/resources/templates/common/side-menu.html
+++ b/src/main/resources/templates/common/side-menu.html
@@ -2,7 +2,14 @@
   <script src="https://kit.fontawesome.com/890489b5e8.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/fragments/side-menu.css">
   <div th:fragment="side-menu">
+    
     <div class="sideBar">
+      <div class="support-nav">
+        <a href="/support" class="support-btn">
+          <i class="fa-solid fa-headset"></i> 고객지원
+        </a>
+      </div>
+  
       <h3 class="menu">
         <a href="/customer/qna" style="text-decoration: none; color:#333;"><i class="fa-solid fa-question-circle"></i>&nbsp;&nbsp;&nbsp;&nbsp;자주 묻는 질문(FAQ)</a>
       </h3>
